--- a/about.html
+++ b/about.html
@@ -23,7 +23,6 @@
 				<ul class="nav-items">
 					<li><a href="index.html">Work</a></li>
 					<li><a href="about.html">About</a></li>
-		<!-- 			<li><a href="">CV</a></li> -->
 				</ul>
 			</nav>
 		</header>
@@ -33,23 +32,21 @@
 
 		<section id="logo">
 			<img src="img/profile.png" alt="" width=230rem>
-		<!-- 	<h1>김희진 Heejin Kim</h1>
-			<a href="mailto:rangcon999@gmail.com"><p>rangcon999@gmail.com</p></a> -->
 		</section>
 
 		<section id="about">
 			<div class="about1">
 				<h1>김희진 Heejin Kim</h1>
-				<a href="mailto:rangcon999@gmail.com">rangcon999@gmail.com</a> / <a href="">CV(pdf)</a>
+				<a href="mailto:rangcon999@gmail.com">rangcon999@gmail.com</a>
 				<br>
 				<br>
-				<p>언제나 새로운 영역에 도전하고자 하는 디자이너. UI 디자인, UX 리서치, 데이터 시각화, 웹 프론트엔드 개발, 그래픽 디자인 등의 분야에서 활동합니다.</p>
+				<p>언제나 새로운 영역에 도전하고자 하는 디자이너. UI 디자인, UX 리서치, 데이터 시각화, 웹 프론트엔드 개발, 그래픽 디자인 등의 분야에서 활동하고 있습니다.</p>
 			</div>
 
 			<div class="skill">
 				<hr class="two">
 				<h1>Skill</h1>
-				<br>
+				<br><br>
 				<ul>
 				<li>Adobe Photoshop</li>
 				<li>Adobe Illustrator</li>
@@ -67,7 +64,7 @@
 			<div class="experience">
 				<hr class="two">
 				<h1>Experience</h1>
-				<br>
+				<br><br>
 				<ul>
 					2018
 					<li>현대차 자율주행 UX공모전</li>
