--- a/index.html
+++ b/index.html
@@ -39,7 +39,72 @@
 		</section>
 
 		<section id="pjs">
-			<a href="naver.com">
+			<a href="p_naver.html">
+			<div class="naver">
+				<div class="thumbnail-wrapper">
+				<img src="img/naver/thumbnail.png" alt="네이버 경로지도">
+				</div>
+
+				<div class="text-wrapper">
+				<article id="pjs">
+					<h1>네이버 블로그 여행 경로 에디터</h1>
+					<h2>Naver blog route editor design</h2>
+					<br>
+					<hr class="three">
+					<h2>2018</h2>
+					<h2>UX/UI</h2>
+				</article>
+				</div>
+			</div>
+			</a>
+		</section>
+
+		<section id="pjs">
+			<a href="p_mirae.html">
+			<div class="mirae">
+				<div class="thumbnail-wrapper">
+				<img src="img/mirae/thumbnail.png" alt="미래에셋대우 MTS">
+				</div>
+
+				<div class="text-wrapper">
+				<article id="pjs">
+					<h1>미래에셋대우 MTS 디자인</h1>
+					<h2>MiraeAsset-Daewoo MTS Design</h2>
+					<br>
+					<hr class="three">
+					<h2>2017</h2>
+					<h2>UX/UI</h2>
+				</article>
+				</div>
+			</div>
+			</a>
+		</section>
+
+		<section id="pjs">
+			<a href="p_ascent.html">
+			<div class="ascent">
+				<div class="thumbnail-wrapper">
+				<img src="img/asc/thumbnail.png" alt="Ascent">
+				</div>
+
+				<div class="text-wrapper">
+				<article id="pjs">
+					<h1>ascent</h1>
+					<h2>Customizing perfume</h2>
+					<br>
+					<hr class="three">
+					<h2>2016</h2>
+					<h2>BX</h2>
+				</article>
+				</div>
+			</div>
+			</a>
+		</section>
+
+	</div>
+
+<!-- 		<section id="pjs">
+			<a href="p_naver.html">
 			<div class="pj1">
 			<article id="pj1">
 				<h1>네이버 블로그 여행 경로 에디터</h1>
@@ -51,41 +116,18 @@
 			</div>
 			</a>
 
-			<a href="">
-			<div class="pj2">
-				<article id="pj2">
-					<h1>미래에셋대우 HTS/MTS 리디자인 : 2차</h1>
-					<h2>MirraeAsset Daewoo HTS/MTS Redesign Stage 2</h2>
-					<br>
-					<h2>2017</h2>
-					<h2>UX/UI</h2>
-				</article>
-			</div>
-			</a>
 			
 			<a href="">
 			<div class="pj3">
 			<article id="pj3">
-				<h1>미래에셋대우 HTS/MTS 리디자인 : 1차</h1>
-				<h2>MirraeAsset Daewoo HTS/MTS Redesign : Stage 1</h2>
+				<h1>미래에셋대우 MTS 리디자인</h1>
+				<h2>MirraeAsset Daewoo MTS Redesign</h2>
 				<br>
 				<h2>2017</h2>
 				<h2>UX/UI</h2>
 			</article>
 			</div>
 			</a>
-
-			<a href="">
-			<div class="pj4">
-			<article id="pj4">
-				<h1>War and Power</h1>
-				<br>
-				<h2>2016</h2>
-				<h2>UI, Infographic</h2>
-			</article>
-			</div>
-			</a>
-
 
 			<a href="">
 			<div class="pj5">
@@ -99,44 +141,7 @@
 			</div>
 			</a>
 
-			<a href="">
-			<div class="pj6">
-			<article id="pj6">
-				<h1>Google Doodle Idea</h1>
-				<h2>구글 두들 아이디어 제안</h2>
-				<br>
-				<h2>2016</h2>
-				<h2>UI, Infographic</h2>
-			</article>
-	 		</div>
-			</a>
-
-			<a href="">
-			<div class="pj7">
-			<article id="pj7">
-				<h1>콜로퀴움 포스터</h1>
-				<h2>Colloquium Posters Design</h2>
-				<p><br></p>
-				<p>2016</p>
-				<p>Graphic Design</p>
-			</article>
-			</div>
-			</a>
-
-			<a href="">
-			<div class="pj8">
-			<article id="pj8">
-				<h1>현대차 자율주행 UX 공모전</h1>
-				<h2>Colloquium Posters Design</h2>
-				<br>
-				<h2>2018</h2>
-				<h2>Graphic Design</h2>
-			</article>
-			</div>
-			</a>
-
-		</section>
-	</div>
+		</section> -->
 
 	<footer>
 		<p>© Copyright 2018 Heejin Kim all right reserved</p>
