--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 
 				<div class="text-wrapper">
 				<article id="pjs">
-					<h1>네이버 블로그 여행 경로 에디터</h1>
+					<h1>네이버 여행 경로 에디터</h1>
 					<h2>Naver blog route editor design</h2>
 					<br>
-					<hr class="three">
+					<hr class="four">
 					<h2>2018</h2>
 					<h2>UX/UI</h2>
 				</article>
@@ -71,7 +71,7 @@
 					<h1>미래에셋대우 MTS 디자인</h1>
 					<h2>MiraeAsset-Daewoo MTS Design</h2>
 					<br>
-					<hr class="three">
+					<hr class="four">
 					<h2>2017</h2>
 					<h2>UX/UI</h2>
 				</article>
@@ -92,7 +92,7 @@
 					<h1>ascent</h1>
 					<h2>Customizing perfume</h2>
 					<br>
-					<hr class="three">
+					<hr class="four">
 					<h2>2016</h2>
 					<h2>BX</h2>
 				</article>
